Fix text overflow in website popover

--- a/settings/css/settings.css
+++ b/settings/css/settings.css
@@ -164,6 +164,7 @@ input#openid, input#webdav { width:20em; }
 .verification-dialog .verificationCode {
 	font-family: monospace;
 	display: block;
+	overflow-wrap: break-word;
 }
 
 .federationScopeMenu {
